fixed alignment issues and added tooltips

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,7 @@ ex. desktop navbar comes after default mobile-first navbar.
 --secondary: rgba(0, 214, 218,1);
 --shadow: rgba(0, 0,0, 0.2);
 --altshadow: rgba(0,214,218,0.2);
+--white: white;
 }
 
 /* General Mobile-first Styles */
@@ -87,7 +88,7 @@ nav {
     position: fixed;
     width: 100%;
     max-width: 100vw;
-    z-index: 1000;
+    z-index: 10000;
     background-color: white;
 }
 
@@ -527,6 +528,20 @@ ul {
         width: 50%;
     }
 }
+#otherProjectsTitle {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    margin-bottom: 5px;
+}
+#otherProjects {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    gap: 12px;
+}
+
 
 /*
     About Me Section
@@ -557,6 +572,7 @@ ul {
     transition: 0.3s;
     margin-bottom: 5px ;
     border: 4px solid var(--primary);
+    
 }
 
 .profile-img:hover {
@@ -604,7 +620,7 @@ ul {
     font-weight: bold;
     font-size: 14px;
     padding: 5px;
-    color: white;
+    color: var(--white);
     height: 30px;
 }
 
@@ -614,7 +630,8 @@ ul {
     flex-wrap: wrap;
     -ms-flex-direction: row;
     -ms-flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    padding: 10px 0 0 0;
 }
 
 .tech-card-tech {
@@ -622,9 +639,51 @@ ul {
     max-height: 64px;
     display: flex;
     align-items: center;
-    margin: 5px;
     font-size: 64px;
 }
+
+.tooltip {
+    position: relative;
+  }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: var(--secondary);
+    color: #333333;
+    text-align: center;
+    border-radius: 6px;
+  
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.5s;
+  }
+  
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent #53ed6a transparent;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
+
+#express {
+    padding-top: 10px;
+}
+
 
 /* CV Section Styles */
 
